Fix styles on IOS

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
 
 @layer base {
   :root {
+    -webkit-appearance: none;
     --background: 0 0% 100%;
     --foreground: 222.2 47.4% 11.2%;
 
